bug: Fix title align

--- a/resources/ext.embedVideo.consent.less
+++ b/resources/ext.embedVideo.consent.less
@@ -98,6 +98,6 @@
 	margin: 0 auto;
 
 	.embedvideo-consent__title {
-		text-align: center;
+		text-align: left;
 	}
 }
